--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,8 @@
   <meta name="theme-color" content="#000000" />
 
   <!-- React-slick CDN -->
-  <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css"/>
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"/>
-
+  <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" /> 
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
   <!-- Google fonts -->
   <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700|Pacifico" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Kalam:300,400,700" rel="stylesheet">
@@ -22,7 +21,7 @@
 
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
 
   <title>DailyNews</title>
 </head>
